--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "repository": "https://github.com/hpe-idol/sunburst",
   "private": true,
   "license": "MIT",
+  "scripts": {
+    "test": "grunt test",
+    "browser-test": "grunt browser-test"
+  },
   "devDependencies": {
-    "grunt-babel": "^6.0.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.10.1",
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-jasmine": "^1.0.0",
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-template-jasmine-requirejs": "~0.2.3"
+    "grunt-template-jasmine-requirejs": "~0.2.3",
+    "requirejs": "^2.3.3"
+  },
+  "dependencies": {
+    "d3": "3.3.8",
+    "jquery": "1.10.2",
+    "underscore": "1.8.3"
   }
 }
